--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,5 @@
 name = instant_sapling_growth
+title = Instant Sapling Growth
 description = A mod for Minetest that immediately grows a sapling when placed.
 optional_depends = default, maple, ferns, dryplants, bushes_classic, sequoia, willow, pomegranate, plumtree, pineapple, palm, oak, mahogany, lemontree, larch, jacaranda, hollytree, ebony, clementinetree, chestnuttree, cherrytree, cacaotree, birch, baldcypress, ethereal, moretrees
 min_minetest_version = 5.0.0
